--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Site do Prof. Maurício Jr</title>
+  <link rel="stylesheet" href="estilo.css">
+  <script src="myScript.js"></script>
 </head>
 <body>
-
 <h1>Disciplina de INTW:</h1>
-<p>Testando Servidor <b>GitHub Pages </b></p>
-
+<p id="demo">Testando Servidor <b>000webhost </b></p>
 </body>
 </html>
