--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>Disciplina de INTW:</h1>
-<p id="demo">Testando Servidor <b>000webhost </b></p>
+<p id="demo">Testando Servidor <b>Git Hub Pages </b></p>
 </body>
 </html>
