--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 <title>Site do Prof. Maurício Jr</title>
-  <link rel="stylesheet" href="estilo.css">
-  <script src="myScript.js"></script>
+ <link rel="stylesheet" href="estilos.css">
+ <script src="meuScript.js"></script>
 </head>
 <body>
+
 <h1>Disciplina de INTW:</h1>
-<p id="demo">Testando Servidor <b>Git Hub Pages </b></p>
+<p id="paragrafo1">Testando Servidor <b>000webhost </b></p>
+<button type="button" onclick="mudarParagrafo()">Clique para mudar o parágrafo acima!</button>
 </body>
 </html>
